--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=db_behzi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=mahan
+DB_PASSWORD=155180
